--- a/src/components/bottom/bottom.css
+++ b/src/components/bottom/bottom.css
@@ -1,18 +1,15 @@
 .bottom_right {
-    font-family: 'Helvetica';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 150%;
-color: #A0AEC0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: #a0aec0;
 }
 
 .bottom_left {
-    font-family: 'Helvetica';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 150%;
-
-color: #A0AEC0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: #a0aec0;
 }
