--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,25 +1,84 @@
 .sidebar__layout {
-    background: #F8F9FA !important;
-    flex: 0 0 250px !important; 
-    max-width: 250px !important; 
-    min-width: 250px !important; 
-    width: 250px !important;
-  }
+  background: #f8f9fa !important;
+  flex: 0 0 250px !important;
+  max-width: 250px !important;
+  min-width: 250px !important;
+  width: 250px !important;
+}
+
+.sidebar__layout-box {
+  background-image: url("../../assets/img/bgImg.png"); /* The image used */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.sidebar__layout-menu .ant-menu-item {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 150%;
+  color: #a0aec0;
+}
+
+.sidebar__layout-menu .ant-menu-item svg {
+  width: 18px;
+  height: 18px;
+  /* background: #ffffff;
+  border-radius: 12px; */
+}
+
+.sidebar__layout-menu
+  .ant-menu:not(.ant-menu-horizontal)
+  .ant-menu-item-selected {
+  background-color: transparent;
+  background: #ffffff;
+  box-shadow: 0px 3.5px 5.5px rgba(0, 0, 0, 0.02);
+  border-radius: 15px;
+}
+
+.sidebar__layout-menu .ant-menu-item-selected {
+  color: #a0aec0;
+}
+
+.sidebar__layout-menu .ant-menu-item-selected svg {
+  filter: invert(69%) sepia(34%) saturate(552%) hue-rotate(345deg)
+    brightness(99%) contrast(88%);
+}
+
+.sidebar__layout-menu .ant-menu-item:hover {
+  background: #FFFFFF;
+box-shadow: 0px 3.5px 5.5px rgba(0, 0, 0, 0.02);
+border-radius: 12px;
+}
+
+.sidebar__layout-menu .ant-menu-item:hover svg {
+  filter: invert(100%) sepia(4%) saturate(7491%) hue-rotate(184deg) brightness(103%) contrast(102%);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.sidebar__layout-menu .ant-menu-inline .ant-menu-item:after {
+  display: none;
+}
 
 #components-layout-demo-responsive .logo {
-    height: 32px;
-    margin: 16px;
-    background: rgba(255, 255, 255, 0.2);
-  }
-  
-  .site-layout-sub-header-background {
-    background: #F8F9FA;
-  }
-  
-  .site-layout-background {
-    background: #F8F9FA;
-  }
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.2);
+}
 
-  .sidebar__layout-menu {
-    background: #F8F9FA;
-  }
+.site-layout-sub-header-background {
+  background: #f8f9fa;
+}
+
+.site-layout-background {
+  background: #f8f9fa;
+}
+
+.sidebar__layout-menu {
+  background: #f8f9fa;
+}
