--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -4,6 +4,11 @@
   max-width: 250px !important;
   min-width: 250px !important;
   width: 250px !important;
+  padding: 10px 0px 70px 0px;
+}
+
+.sidebar__layout .vanLogo {
+  width: 150px
 }
 
 .sidebar__layout-box {
@@ -14,6 +19,11 @@
   margin: 20px;
   padding: 10px;
   border-radius: 8px;
+}
+
+.sidebar__layout-menu {
+  background: #f8f9fa;
+  margin-top: 20px;
 }
 
 .sidebar__layout-menu .ant-menu-item {
@@ -76,9 +86,5 @@ border-radius: 12px;
 }
 
 .site-layout-background {
-  background: #f8f9fa;
-}
-
-.sidebar__layout-menu {
   background: #f8f9fa;
 }
