--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,8 +1,76 @@
-.site-layout-sub-header-background .breadcrumb {
-    list-style: none;
-    padding: 10px 5px;
+.site-layout-sub-header-background .topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.site-layout-sub-header-background ul.breadcrumb {
+  list-style: none;
+  padding: 7px;
+  width: 100%;
+}
+
+.site-layout-sub-header-background ul.breadcrumb li {
+  display: inline;
+  font-style: normal;
+  font-size: 11px;
+}
+
+.site-layout-sub-header-background ul.breadcrumb li + li:before {
+  padding: 3px;
+  color: black;
+  content: "/\00a0";
+}
+
+.site-layout-sub-header-background ul.breadcrumb li a {
+  color: #a0aec0;
+  text-decoration: none;
 }
 
 .site-layout-sub-header-background .topbar_right {
-    display: flex;
+  display: flex;
+  align-items: center;
+}
+
+.site-layout-sub-header-background .topbar_right .item {
+  align-items: center;
+  display: flex;
+  margin-right: 25px;
+}
+
+.site-layout-sub-header-background .topbar_right .item p {
+  align-items: center;
+  margin-bottom: -1px;
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 150%;
+  color: #718096;
+}
+
+.site-layout-sub-header-background .topbar_right .item .search {
+  display: flex;
+  justify-content: center;
+}
+
+.site-layout-sub-header-background .topbar_right .item .search input {
+  background: #ffffff url("../../assets/img/searchIcon.png") no-repeat 13px;
+  border: 0.5px solid #e2e8f0;
+  border-radius: 15px;
+  box-shadow: inset 0 -1px 0 hsl(0deg 0% 100% / 20%),
+    inset 0 1px 0 rgb(0 0 0 / 2%);
+  outline: none;
+  padding: 12px 4px 12px 40px;
+  width: 250px;
+  height: 39px;
+}
+
+.site-layout-sub-header-background 
+  ::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  color: #a0aec0;
 }
