updates on tables components & assets folder

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -53,11 +53,16 @@ color: #FFFFFF;
   color: #a0aec0;
 }
 
+.sidebar__layout-menu .ant-menu-item:hover {
+  color: #2D3748 !important;
+}
+
 .sidebar__layout-menu .ant-menu-item svg {
   width: 18px;
   height: 18px;
-  /* background: #ffffff;
-  border-radius: 12px; */
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 10px;
 }
 
 .sidebar__layout-menu
@@ -80,6 +85,11 @@ color: #FFFFFF;
     brightness(99%) contrast(88%);
 }
 
+.sidebar__layout-menu .ant-menu-item:hover svg {
+  filter: invert(73%) sepia(47%) saturate(488%) hue-rotate(123deg) brightness(92%) contrast(87%);
+  border-radius: 5px;
+}
+
 .sidebar__layout-menu .ant-menu-item:hover {
   background: #FFFFFF;
 box-shadow: 0px 3.5px 5.5px rgba(0, 0, 0, 0.02);
@@ -89,7 +99,7 @@ margin-left: 10px;
 }
 
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-  background-color: white !important;
+  background-color: transparent;
 }
 
 .ant-menu-inline .ant-menu-item:after, .ant-menu-vertical-left .ant-menu-item:after, .ant-menu-vertical-right .ant-menu-item:after, .ant-menu-vertical .ant-menu-item:after {
@@ -100,13 +110,10 @@ margin-left: 10px;
   border-right: none;
   transform: scaleY(.0001);
   opacity: 0;
-  transition: transform .15s cubic-bezier(.215,.61,.355,1),opacity .15s cubic-bezier(.215,.61,.355,1);
-}
-
-.sidebar__layout-menu .ant-menu-item:hover svg {
-  filter: invert(100%) sepia(4%) saturate(7491%) hue-rotate(184deg) brightness(103%) contrast(102%);
-  border-radius: 5px;
-  padding: 10px;
+  /* transition: transform .15s cubic-bezier(.215,.61,.355,1),opacity .15s cubic-bezier(.215,.61,.355,1); */
+  border-radius: 15px;
+width: 219px;
+margin-left: 10px;
 }
 
 .sidebar__layout-menu .ant-menu-inline .ant-menu-item:after {
