--- a/src/components/tables/tables.css
+++ b/src/components/tables/tables.css
@@ -4,11 +4,12 @@
 
 .site-layout-background .table {
     width: 1160px;
-    height: 300px;
+    /* height: 300px; */
     background: #FFFFFF;
 box-shadow: 0px 3.5px 5.5px rgba(0, 0, 0, 0.02);
 border-radius: 15px;
-margin-top: 15px;
+/* margin-top: 15px; */
+margin-bottom: 15px;
 }
 
 .site-layout-background .table p span {
